--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<title></title>
 </head>
 <body>
-<p> this is home page</p>
+	<header>App</header>
+	<section>
+		<p> this is home page</p>
+	</section>
+	<footer>
+		Footer
+	</footer>
 </body>
 </html>
