--- a/signin/signin.html
+++ b/signin/signin.html
@@ -12,6 +12,9 @@
 	<footer>
 		Footer
 	</footer>
-	<script type="text/javascript" src="scripts/app.js"></script>
+	<script type="text/javascript" src="scripts/app.js">
+	<script type="text/javascript">	
+		console.log('this is sign in feature ');
+	</script>
 </body>
 </html>
