added style to signin

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -7,7 +7,7 @@
 <body>
 	<header>App</header>
 	<section>
-		<p> Please Sign In</p>
+		<p class="strong"> Please Sign In</p>
 	</section>
 	<footer>
 		Footer
