--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
 	<header>App</header>
 	<section>
-		<p> this is home page</p>
+		<p> this is home page 
+		jghjghj
+		ghjhk
+		</p>
 	</section>
 	<footer>
 		Footer
