someone else commiting

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <body>
 	<header>App</header>
 	<section>
-		<p> this is home page 
-		jghjghj
-		ghjhk
-		</p>
+		<p> this is home page 	</p>
 	</section>
 	<footer>
 		Footer
